added event list activity and mvp for it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".home.HomeActivity">
 
         </activity>
+        <activity android:name=".eventlist.EventListActivity">
+
+        </activity>
     </application>
 
 </manifest>
