--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,11 @@
         <activity android:name=".splash.SplashActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".home.HomeActivity">
-
-        </activity>
-        <activity android:name=".eventlist.EventListActivity">
-
-        </activity>
+        <activity android:name=".home.HomeActivity"/>
+        <activity android:name=".eventlist.EventListActivity"/>
     </application>
 
 </manifest>
