--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     //mockito
-    implementation 'org.mockito:mockito-core:2.17.0'
+    testCompile 'org.mockito:mockito-core:2.17.0'
     //Junit
     testImplementation 'junit:junit:4.12'
     //Espresso
