--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     //mockito
-    testCompile 'org.mockito:mockito-core:2.17.0'
+    testImplementation 'org.mockito:mockito-core:2.17.0'
     //Junit
     testImplementation 'junit:junit:4.12'
     //Espresso
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    implementation 'com.squareup.okhttp3:mockwebserver:3.10.0'
 }
