--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".home.HomeActivity"/>
         <activity android:name=".eventlist.EventListActivity"/>
+        <activity android:name=".details.DetailsActivity"/>
     </application>
 
 </manifest>
