--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:3.8.0'
+    //CardView
+    implementation 'com.android.support:cardview-v7:26.+'
+
     //Dagger2
     implementation 'com.google.dagger:dagger:2.12'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
