CreateEventActivity added somem inor changes to HomeActivity to accomodate floating action button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".eventlist.EventListActivity"/>
         <activity android:name=".details.DetailsActivity"
                   android:theme="@style/DetailsTheme" />
+        <activity android:name=".create.CreateActivity"/>
     </application>
 
 </manifest>
