--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     //CardView
     implementation 'com.android.support:cardview-v7:26.+'
-
     //Dagger2
     implementation 'com.google.dagger:dagger:2.12'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
@@ -49,5 +48,6 @@ dependencies {
     //Espresso
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'joda-time:joda-time:2.10'
 }
