--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.+'
     //Dagger2
     implementation 'com.google.dagger:dagger:2.12'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -49,7 +50,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-   //Utility libs
+    //Utility libs
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'joda-time:joda-time:2.10'
 }
