--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".followed.FollowedEventsActivity"></activity>
+        <activity android:name=".followed.FollowedEventsActivity"/>
     </application>
 
 </manifest>
