--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.bookee.eventz"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 26
         versionCode 1
         versionName "0.1"
@@ -46,6 +46,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.17.0'
     //Junit
     testImplementation 'junit:junit:4.12'
+    //Ui automator
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     //Espresso
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test:rules:1.0.1'
@@ -53,4 +55,5 @@ dependencies {
     //Utility libs
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'joda-time:joda-time:2.10'
+    implementation 'org.robolectric:robolectric:4.0-alpha-2'
 }
