--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".EventApp"
@@ -27,7 +28,7 @@
         <activity
             android:name=".details.DetailsActivity"
             android:theme="@style/DetailsTheme" />
-        <activity android:name=".create.CreateActivity" />
+        <activity android:name=".create.CreateActivity"/>
 
         <receiver
             android:name=".details.FollowEventBroadcastReceiver">
